GNOME Bugzilla – Bug 707660
playbin, playsink: typo in convert-sample signal docs
Last modified: 2013-09-18 16:51:53 UTC
Hi while switching from convert-frame to convert-signal and from GstBuffer to GstSample, it seems a couple of inline weren't updated. Attaching a couple of trivial patches for this. Cheers,
Created attachment 254309 [details] [review] 0001-playbin-Fix-doc-of-convert-sample-signal.patch
Created attachment 254310 [details] [review] 0002-playsink-Fix-doc-of-convert-sample-signal.patch
Thanks, pushed (squashed): commit 8492b956cd3ce23eb38bf78d3aaaeafbcc125e2e Author: Loïc Minier <lool@dooz.org> Date: Fri Sep 6 23:17:44 2013 +0200 playback: fix docs of convert-sample action signal convert-sample returns a GstSample, not a GstBuffer. https://bugzilla.gnome.org/show_bug.cgi?id=707660